[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    serde = {version = "1.0.137", features = ["derive"]}
    serde_json = "1.0.81"
    sha2 = "0.10.2"
    rand = "0.8.3"
    clearscreen = "1.0.4"
    webbrowser = "0.7.1"